mi primera confirmación de actualización

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <!--HEADER-->
     <header class="container">
         <a href="https.//google.com" class="logo"><i class="fa-solid fa-gamepad"></i></a>
-            <input type="checkbox" id="check" />
-            <label for="check" class="checkbtn">
-                <i class="fa-solid fa-bars"></i>
-            </label>
-            <nav class="navbar">
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+        <nav class="navbar">
             <ul class="menu">
                 <li><a class="navli" href="/Practica_1/borrar/index.html">Inicio</a></li>
                 <li><a class="navli" href="/Practica_1/borrar/micuenta.html">Mi cuenta</a></li>
@@ -43,8 +43,12 @@
             </div>
             <div class="cont">
                 <img src="/Miprimerpagweb/images.jpg">
-                <p>Soy Matías tengo 33 años y vivo en Cosquin, me gusta mucho el deporte, la tecnologia, los juegos
-                    Online yaprender sobre las nuevas tecnologias.</p>
+                <p>Hola! mi nombre es Matías soy de Argentina,
+                    me gusta mucho los deportes, la tecnologia,
+                    los juegos Online y poner en practica todo
+                    lo que voy aprendiendo en el camino de el
+                    desarrollo de sitios web.
+                </p>
             </div>
         </section>
         <section class="pict">
@@ -58,6 +62,14 @@
                 <div class="caja1">
                     <img src="/Miprimerpagweb/wallpaperflare.com_wallpaper (3).jpg">
                 </div>
+            </div>
+            <div class="greeting">
+                <p>
+                    Como les comente anteriormente me gustan los juegos online mis
+                    preferidos son los moba (multiplayer online battle arena) y 
+                    entre ellos mis preferido es el Mobile Legends. aqui te 
+                    contare sobre algunos de mis heroes preferidos para mi rol.
+                </p>
             </div>
         </section>
         <section class="principal">
@@ -87,24 +99,24 @@
                 <h1>Contacto</h1>
                 <p><em>¡Esperamos tu consulta!</em></p>
                 <form action="#" method="get" class="formulario" id="form">
-                  <div class="form-row">
-                    <label for="nombre">Nombre</label>
-                    <input id="nombre" name="nombre" type="text" />
-                  </div>
-                  <div class="form-row">
-                    <label for="email">Email</label>
-                    <input id="email" name="email" type="email" placeholder="pepe@gmail.com" required />
-                  </div>
-                  <div class="form-row">
-                    <label for="mensaje">Mensaje</label>
-                    <textarea id="mensaje" name="mensaje"></textarea>
-                  </div>
-                  <div class="form-row">
-                    <button>Enviar</button>
-                  </div>
-                  <p class="alertas" id="alertas"></p>
+                    <div class="form-row">
+                        <label for="nombre">Nombre</label>
+                        <input id="nombre" name="nombre" type="text" />
+                    </div>
+                    <div class="form-row">
+                        <label for="email">Email</label>
+                        <input id="email" name="email" type="email" placeholder="pepe@gmail.com" required />
+                    </div>
+                    <div class="form-row">
+                        <label for="mensaje">Mensaje</label>
+                        <textarea id="mensaje" name="mensaje"></textarea>
+                    </div>
+                    <div class="form-row">
+                        <button>Enviar</button>
+                    </div>
+                    <p class="alertas" id="alertas"></p>
                 </form>
-              </footer>
+            </footer>
         </section>
         <section class="seccion-2">
             <img src="/Miprimerpagweb/descarga.jpg" alt="Imagen-Hannabi">
